<resources>
    <string name="load_picture" translatable="false">Load Picture</string>
    <string name="load_video" translatable="false">Load Video</string>
    <string name="start_camera" translatable="false">Start Camera</string>
    <string name="instruction" translatable="false">Please press any button above to start</string>
    <string name="items_to_count">items_to_count</string>
    <string name="_0">0</string>
    <string name="count_the_number_of_items">Count the number of items</string>
</resources>
