<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_load_picture"
            android:layout_width="wrap_content"
            style="?android:attr/buttonBarButtonStyle" android:layout_height="wrap_content"
            android:text="@string/load_picture"
            android:visibility="gone"/>
        <Button
            android:id="@+id/button_load_video"
            android:layout_width="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_height="wrap_content"
            android:text="@string/load_video"
            android:visibility="gone"/>
        <Button
            android:id="@+id/button_start_camera"
            android:layout_width="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_height="wrap_content"
            android:text="@string/start_camera" />
    </LinearLayout>
    <FrameLayout
        android:id="@+id/preview_display_layout"
        android:layout_width="match_parent"
        android:layout_height="250dp">
        <TextView
            android:id="@+id/no_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/instruction" />
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/prompt_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/count_the_number_of_items">
            </TextView>
            <TextView
                android:id="@+id/counter_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:paddingLeft="10dp"
                android:textColor="@color/colorAccent"
                android:textSize="45sp">
            </TextView>
        </LinearLayout>
        <ImageView
            android:id="@+id/counter_image"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/bees"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:padding="10dp"
            android:contentDescription="@string/items_to_count">
        </ImageView>
    </LinearLayout>
</LinearLayout>
